test/seq/cmdlists/invalid_ttl1_3.err
SyntaxError: Invalid TTL value
Line: 3
ttl(2)=no
       ~~
